No compilation issues.  DB connection working, employee and custoer tables created and populated correctly.
Signed-off-by: lgalindop <lgalindop@gmail.com>

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,3 +2,8 @@ spring.datasource.url=jdbc:postgresql://localhost:5432/emociones
 spring.datasource.name=emociones
 spring.datasource.username=lgalindop
 spring.datasource.password=perro
+
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.database=POSTGRESQL
+spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
