--- a/pom.xml
+++ b/pom.xml
@@ -58,7 +58,12 @@
 			<artifactId>spring-hateoas</artifactId>
 			<version>2.0.1</version>
 		</dependency>
-	</dependencies>
+        <dependency>
+            <groupId>org.hibernate.orm</groupId>
+            <artifactId>hibernate-core</artifactId>
+            <version>6.1.6.Final</version>
+        </dependency>
+    </dependencies>
 
 	<build>
 		<plugins>
